secondfile/objects/Product_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>API_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>API Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATOM_Deal__c</fullName>
        <formula>SP_Product__r.Deal__r.ATOM_Deal__c</formula>
        <label>ATOM Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>SP_Product__r.Deal__r.Account.Id</formula>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BEID_History__c</fullName>
        <label>BEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BEID__c</fullName>
        <label>BEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Effective_Date__c</fullName>
        <label>Billing Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clear_Special_Pricing__c</fullName>
        <formula>SP_Product__r.Deal__r.Clear_Special_Pricing__c</formula>
        <label>Clear Special Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Id__c</fullName>
        <formula>CASESAFEID(SP_Product__r.Deal__c)</formula>
        <label>Deal Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Rate_Plan_ID__c</fullName>
        <formula>SP_Product__r.Deal_Rate_Plan_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Rate Plan ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Set_ID_History__c</fullName>
        <label>Determinant Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Set_ID__c</fullName>
        <label>Determinant Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disconnect_Code__c</fullName>
        <label>Disconnect Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Discount %</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discountable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Discountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discounted_Usage_Charge__c</fullName>
        <label>Discounted Usage Charge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBM_Competitive_Discount_Plan_ID__c</fullName>
        <label>EBM Competitive Discount Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBM_Price__c</fullName>
        <label>EBM Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fan_Service_Discount__c</fullName>
        <label>Fan Service Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Final_Price__c</fullName>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flat_Price__c</fullName>
        <defaultValue>null</defaultValue>
        <label>Flat Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_ListPrice_Latest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ListPrice Latest?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_Level_Tier_History__c</fullName>
        <label>Low Level Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Low_Level_Tier__c</fullName>
        <label>Low Level Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Pricing_Assignment_Technical__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is internally used for MACD Pricing Assignment. This will be set True in Opty class when Opty.isRetriggerMACDPricingAssgnmnt__c is True.</description>
        <label>MACD Pricing Assignment Technical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a techincal field to identify records created due to a MACD Disconnect. Not required on Page layout.</description>
        <label>MACD Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRC_Modifier__c</fullName>
        <label>MRC Modifier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Price_with_Deal_Reg_Discounts__c</fullName>
        <description>This field stores the net price after Deal Reg Discounts are applied</description>
        <inlineHelpText>This field stores the net price after Deal Reg Discounts are applied</inlineHelpText>
        <label>Net Price with Deal Reg Discounts</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Price_with_SP_Order_Discounts__c</fullName>
        <description>This field stores the net price after SP and Order Discounts are applied</description>
        <inlineHelpText>This field stores the net price after SP and Order Discounts are applied</inlineHelpText>
        <label>Net Price with SP/Order Discounts</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Concurrent_Call__c</fullName>
        <label>Number of Concurrent Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpptyID__c</fullName>
        <formula>SP_Product__r.Deal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpptyID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Hidden_Price__c</fullName>
        <label>Original Hidden Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Net_Price__c</fullName>
        <description>This field stores the original net price without promotions</description>
        <inlineHelpText>This field stores the original net price without promotions</inlineHelpText>
        <label>Original Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PBI_Number_History__c</fullName>
        <label>PBI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBI_Number__c</fullName>
        <label>PBI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_Line_Id__c</fullName>
        <externalId>true</externalId>
        <label>PP Line Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Value__c</fullName>
        <label>Physical Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Competitive_Status__c</fullName>
        <formula>TEXT(SP_Product__r.Competitive_Pricing_Status__c)</formula>
        <label>Product Competitive Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Deal_Status__c</fullName>
        <formula>TEXT(SP_Product__r.Deal_Status__c)</formula>
        <label>Product Deal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Detail__c</fullName>
        <label>Product Detail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Record_Type__c</fullName>
        <formula>SP_Product__r.RecordType.Name</formula>
        <label>Product Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_Code__c</fullName>
        <label>Product Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_Desc__c</fullName>
        <label>Product Type Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_of_items__c</fullName>
        <label>Quantity of items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RDSVersion__c</fullName>
        <formula>SP_Product__r.Deal__r.RDS_Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RDS Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <label>Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPDiscount__c</fullName>
        <formula>SP_Product__r.Deal__r.Account.SP_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPDiscount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Discount_Percentage__c</fullName>
        <description>This is special Pricing Field</description>
        <label>Special Pricing Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Product__c</fullName>
        <label>SP Product</label>
        <referenceTo>SPProduct__c</referenceTo>
        <relationshipLabel>Product Pricing</relationshipLabel>
        <relationshipName>Product_Pricing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SP_Site_Id__c</fullName>
        <description>Technical field to capture Site Id of related SP Product</description>
        <formula>SP_Product__r.Site_ID__c</formula>
        <label>SP Site Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_Percentage__c</fullName>
        <description>This is formula is a generic one for both deal reg as well as SP Discount %</description>
        <formula>IF(SP_Discount_Percentage__c &gt;= SP_Product__r.Deal__r.Calculated_Discount_Percentage__c, ((SP_Discount_Percentage__c - SP_Product__r.Deal__r.Calculated_Discount_Percentage__c*100)/100), ((SP_Product__r.Deal__r.Calculated_Discount_Percentage__c *100 - SP_Discount_Percentage__c)/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative  Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Term_length_Value__c</fullName>
        <formula>SP_Product__r.Term_Length_Value__c</formula>
        <label>Term length(Value)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_Charges__c</fullName>
        <defaultValue>0.0000</defaultValue>
        <label>Usage Charges</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wholesale_Partner__c</fullName>
        <formula>SP_Product__r.Deal__r.Wholesale_Partner__c</formula>
        <label>Wholesale Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wireline_Promo_Discount_Access_Hidden__c</fullName>
        <description>This field stores the original discount percentage without promotional discounts.</description>
        <label>Wireline Promo Discount %(Access Hidden)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wireline_Promo_Discount_Deal_Reg__c</fullName>
        <label>Wireline Promo Discount % (Deal Reg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wireline_Promo_Discount_Map_Site__c</fullName>
        <label>Wireline Promo Discount % (Map/Site)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wireline_Promo_Discount_SP_Order__c</fullName>
        <description>This field stores the Wireline Promotion Discount (SP/Order) applied on the Line Item</description>
        <inlineHelpText>This field stores the Wireline Promotion Discount (SP/Order) applied on the Line Item</inlineHelpText>
        <label>Wireline Promo Discount % (SP/Order)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Name_Applied__c</fullName>
        <description>Created in Sprint 69</description>
        <label>Wireline Promotion Name Applied</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Number_Applied__c</fullName>
        <label>Wireline Promotion Number Applied</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Flag__c</fullName>
        <formula>SP_Product__r.X3rd_Party_Flag__c</formula>
        <label>3rd Party Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>discount_price__c</fullName>
        <label>Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>discounted_price__c</fullName>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isClearPP__c</fullName>
        <formula>SP_Product__r.isClearSP__c</formula>
        <label>isClearPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>line_id__c</fullName>
        <label>Line ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>list_price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppRecentlyUpdated__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field used by CI to determine what products should be removed if they are not updated in SFDC.</description>
        <label>ppRecentlyUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>product_Name_History__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_name__c</fullName>
        <label>Product Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sku_id__c</fullName>
        <label>Sku ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soc_code__c</fullName>
        <label>SOC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Product Pricing</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Pricing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Pricing</pluralLabel>
    <recordTypes>
        <fullName>Access</fullName>
        <active>true</active>
        <description>Access for Products</description>
        <label>Access</label>
    </recordTypes>
    <recordTypes>
        <fullName>Feature</fullName>
        <active>true</active>
        <description>Features for Products</description>
        <label>Feature</label>
    </recordTypes>
    <recordTypes>
        <fullName>Port</fullName>
        <active>true</active>
        <description>Ports for Products</description>
        <label>Port</label>
    </recordTypes>
    <recordTypes>
        <fullName>SOC</fullName>
        <active>true</active>
        <description>SOC codes for Products</description>
        <label>SOC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Usage</fullName>
        <active>true</active>
        <label>Usage</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>List_Price_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(list_price__c)</errorConditionFormula>
        <errorDisplayField>list_price__c</errorDisplayField>
        <errorMessage>List Price is Mandatory</errorMessage>
    </validationRules>
</CustomObject>